fixed triposo image to fit properly and adjusted breakpoint height for tall images at 360px width screen sizes so content card doesn't overflow off right side of screen.

--- a/styles.css
+++ b/styles.css
@@ -968,6 +968,9 @@ video.wide-video {
 	.header-photo-scalable {
 		height: 328px;
 	}
+	.background-photo-tall {
+		height: 435px;
+	}
 }
 
 @media screen and (max-width: 320px) {
